add course preview serializer
